--- a/app/javascript/homeland/markdown.scss
+++ b/app/javascript/homeland/markdown.scss
@@ -239,7 +239,7 @@
     vertical-align: top;
     max-width: 100%;
   }
-  a.zoom-image {
+  .zoom-image {
     cursor: zoom-in;
   }
   a.at_floor {
