--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -37,7 +37,7 @@
     </td>
     <td width="120"><%= user.created_at&.to_date %></td>
     <td>
-      <%= link_to '', edit_admin_user_path(user.id), class: "fa fa-pencil" %>
+      <%= link_to '', edit_admin_user_path(user.id), class: "fa fa-edit" %>
     </td>
   </tr>
 <% end %>
