--- a/app/views/teams/_header.html.erb
+++ b/app/views/teams/_header.html.erb
@@ -20,7 +20,7 @@
           <% end %>
 
           <% if !@team.github.blank? %>
-            <%= link_to(raw('<i class="fa fa-github"></i>'), @team.github_url, target: '_blank', rel: 'nofollow') %>
+            <%= link_to(raw('<i class="fab fa-github"></i>'), @team.github_url, target: '_blank', rel: 'nofollow') %>
           <% end %>
 
           <% if !@team.twitter.blank? %>
