--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -36,7 +36,7 @@
             <% end %>
             <% if Setting.has_module? :github %>
               <% if !@user.github.blank? %>
-                <%= link_to(raw('<i class="fa fa-github"></i>'), @user.github_url, target: '_blank', rel: 'nofollow') %>
+                <%= link_to(raw('<i class="fab fa-github"></i>'), @user.github_url, target: '_blank', rel: 'nofollow') %>
               <% end %>
             <% end %>
             <% if !@user.email.blank? && @user.email_public %>
