--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -17,7 +17,7 @@
     <td><%= item.user.login if !item.user.blank? %></td>
     <td><%= item.body %></td>
     <td><%= l item.created_at, format: :short %></td>
-    <td><%= link_to '', edit_admin_comment_path(item), class: "fa fa-pencil" %>
+    <td><%= link_to '', edit_admin_comment_path(item), class: "fa fa-edit" %>
     <%= link_to '', admin_comment_path(item), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
   </tr>
 <% end %>
