--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -14,7 +14,7 @@
       <td><%= item.name %></td>
       <td><%= item.users_count %></td>
       <td>
-        <%= link_to "", edit_admin_location_path(item.id), class: "fa fa-pencil" %>
+        <%= link_to "", edit_admin_location_path(item.id), class: "fa fa-edit" %>
       </td>
     </tr>
     <% end %>
