--- a/app/views/admin/nodes/index.html.erb
+++ b/app/views/admin/nodes/index.html.erb
@@ -23,7 +23,7 @@
     <td><%= node&.section&.name %></td>
     <td><%= node.sort %></td>
     <td><%= node.topics_count %></td>
-    <td><%= link_to '', edit_admin_node_path(node), class: "fa fa-pencil" %>
+    <td><%= link_to '', edit_admin_node_path(node), class: "fa fa-edit" %>
     <%= link_to '', admin_node_path(node), 'data-confirm' => 'Are you sure?' , method: :delete, class: "fa fa-trash" %></td>
   </tr>
 <% end %>
