--- a/app/views/admin/replies/index.html.erb
+++ b/app/views/admin/replies/index.html.erb
@@ -38,7 +38,7 @@
       <% end %>
     <td><%= link_to(reply.user.login, edit_admin_user_path(reply.user_id), target: "_blank") if reply.user %></td>
     <td><%= l reply.created_at, format: :short %></td>
-    <td><%= link_to '', edit_admin_reply_path(reply), class: "fa fa-pencil" %>
+    <td><%= link_to '', edit_admin_reply_path(reply), class: "fa fa-edit" %>
     <%= link_to '', admin_reply_path(reply), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
   </tr>
 <% end %>
