--- a/app/views/admin/site_configs/index.html.erb
+++ b/app/views/admin/site_configs/index.html.erb
@@ -6,7 +6,7 @@
   <% Setting.editable_keys.each do |key| %>
     <li class="list-group-item">
       <div class="mb-1">
-        <%= icon_tag("gear") %><a href="<%= edit_admin_site_config_path(key) %>" style="font-size: 15px; color: #2162D2;"><%= key %></a>
+        <%= icon_tag("cog") %><a href="<%= edit_admin_site_config_path(key) %>" style="font-size: 15px; color: #2162D2;"><%= key %></a>
         <% if key == "timezone" %>
           <div class="badge">
             当前时区: <%= Time.zone %>
