--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -27,9 +27,9 @@
           <span class="opts pull-right">
             <% if !reply.deleted? %>
               <span class="hideable">
-              <%= link_to('', edit_topic_reply_path(@topic,reply), class: "edit fa fa-pencil", 'data-uid' => reply.user_id, title: "修改回帖")%>
+              <%= link_to('', edit_topic_reply_path(@topic,reply), class: "edit fa fa-edit", 'data-uid' => reply.user_id, title: "修改回帖")%>
               <%= link_to('', "#", 'data-id' => reply.id, 'data-login' => reply.user_login,
-                  title: t("topics.reply_this_floor"), class: "btn-reply fa fa-mail-reply" )
+                  title: t("topics.reply_this_floor"), class: "btn-reply fa fa-reply" )
               %>
               </span>
               <%= likeable_tag(reply, cache: true) %>
