--- a/app/views/shared/_editor_toolbar.html.erb
+++ b/app/views/shared/_editor_toolbar.html.erb
@@ -1,11 +1,11 @@
 <div class="editor-toolbar clearfix">
   <div class="reply-to pull-right" style="display:none;">
-    <i class="fa fa-mail-reply" title="回复"></i>
+    <i class="fa fa-reply" title="回复"></i>
     <a href="#" class="user"></a>
     <a href="#" class="close"><i class="fa fa-close"></i></a>
   </div>
   <div class="toolbar-buttons">
-    <a href="#" class="nav-link pickup-emoji"><i class="fa fa-smile-o"></i></a>
+    <a href="#" class="nav-link pickup-emoji"><i class="fa fa-smile"></i></a>
     <% if Setting.has_module? 'editor.code' %>
     <span class="dropdown" id="dropdown-insert-codes">
       <a href="#editor-toolbar-insert-code" class="nav-link dropdown-toggle" data-toggle="dropdown" title="<%= t("common.editor_insert_codes") %>"><i class="fa fa-code"></i></a>
