--- a/app/views/topics/_buttons.html.erb
+++ b/app/views/topics/_buttons.html.erb
@@ -7,12 +7,12 @@
 
   <% if can? :suggest, @topic %>
     <% if !@topic.suggested_at.blank? %>
-    <%= link_to raw("<i class='fa fa-angle-double-up'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
+    <%= link_to raw("<i class='fa fa-pin'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% else %>
-    <%= link_to raw("<i class='fa fa-angle-double-up'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
+    <%= link_to raw("<i class='fa fa-pin'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% end %>
     <% if !@topic.excellent? %>
-    <%= link_to raw("<i class='fa fa-diamond'></i> 加精"), action_topic_path(@topic.id, type: 'excellent'), title: "设为精华帖" , method: :post, remote: true %>
+    <%= link_to raw("<i class='fa fa-award'></i> 加精"), action_topic_path(@topic.id, type: 'excellent'), title: "设为精华帖" , method: :post, remote: true %>
     <% end %>
 
     <% if !@topic.ban? %>
@@ -24,14 +24,14 @@
   <span class="pull-right opts">
     <% if can?(:close, @topic) %>
       <% if !@topic.closed? %>
-        <%= link_to raw("<i class='fa fa-check'></i>"), action_topic_path(@topic, type: 'close'), method: 'post', title: "关闭讨论／问题已解决", remote: true, data: { toggle: 'tooltip' } %>
+        <%= link_to raw("<i class='fa fa-check-circle'></i>"), action_topic_path(@topic, type: 'close'), method: 'post', title: "关闭讨论／问题已解决", remote: true, data: { toggle: 'tooltip' } %>
       <% else %>
         <%= link_to raw("<i class='fa fa-undo'></i>"), action_topic_path(@topic, type: 'open'), method: 'post', title: "重新开启话题", remote: true, data: { toggle: 'tooltip' } %>
       <% end %>
     <% end %>
 
     <% if can?(:edit, @topic) %>
-    <%= link_to "", edit_topic_path(@topic), class: "fa fa-pencil", title: "修改本帖" %>
+    <%= link_to "", edit_topic_path(@topic), class: "fa fa-edit", title: "修改本帖" %>
     <% end %>
     <% if can?(:destroy, @topic) %>
     <%= link_to "", topic_path(@topic.id), method: :delete, remote: true, 'data-confirm': t("common.confirm_delete"), class: "fa fa-trash", title: "删除本帖" %>
