--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -33,6 +33,6 @@
   <div class="form-actions hide-ios">
     <%= f.submit t("common.save"), class: "btn btn-primary", style: "min-width: 200px", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-topic" %>
 
-    <div class="pull-right hide-ios"><a href="/markdown" target="_blank"><i class="fa fa-tip"></i> 排版说明</a></div>
+    <div class="pull-right hide-ios"><a href="/markdown" target="_blank"><i class="fa fa-life-ring"></i> 排版说明</a></div>
   </div>
 <% end %>
