--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -10,7 +10,7 @@
         <%= topic.title %>
       <% end %>
       <% if suggest %>
-        <i class="fa fa-angle-double-up" title="置顶"></i>
+        <i class="fa fa-pin" title="置顶"></i>
       <% end %>
       <%= topic_excellent_tag(topic) %>
       <%= topic_close_tag(topic) %>
