--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -26,8 +26,8 @@
     .text {
       display: block;
       text-align: left;
-      background: #f5f5f5;
-      border-top: 1px solid #e9e9e9;
+      background: #fff;
+      border-top: 1px solid #f0f0f0;
       font-size: 14px;
       font-weight: bold;
 
