--- a/app/views/team_users/_team_user.html.erb
+++ b/app/views/team_users/_team_user.html.erb
@@ -9,7 +9,7 @@
   </div>
   <td class="buttons">
     <% if can?(:update, @team) && team_user.user_id != current_user&.id %>
-      <%= link_to icon_tag('pencil'), edit_user_team_user_path(@team, team_user) %>
+      <%= link_to icon_tag('edit'), edit_user_team_user_path(@team, team_user) %>
     <% end %>
   </td>
 </tr>
